--- a/nav.html
+++ b/nav.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>me</title>
 </head>
+<h1>simulating conflicts</h1>
 <body>
     
 </body>
