added about me to navigation

--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,9 @@
 </head>
 <h1>simulating conflicts</h1>
 <body>
-    
+    <ul>
+        <li><a href="about.html"></a>
+        </li>
+    </ul>
 </body>
 </html>
