changin project.htm

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,9 @@
     <title>ya</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/about.html">got to about page</a></li>
+    </ul>
     
 </body>
 </html>
