i added contact.html to projects

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,11 @@
     <title>ya</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <a href="contact.html"></a>
+        </li>
+    </ul>
     
 </body>
 </html>
